# Wolf-s-Den

./: .gitignore
01_BRIEF/: agent_rules.md  project.md  universal_rules.md  vst_research.md
02_TASKS/: TASK_001.md  TASK_002.md  TASK_003.md  TASK_004.md  TASK_005.md  TASK_006.md  TASK_007.md  TASK_008.md  TASK_009.md  TASK_010.md  TASK_011.md  TASK_012.md  TASK_013.md  TASK_014.md  TASK_015.md  TASK_016.md  TASK_017.md  TASK_018.md  TASK_019.md  TASK_020.md  TASK_021.md  TASK_022.md  TASK_023.md  TASK_024.md  TASK_025.md  TASK_026.md
03_OUTPUTS/: 001_architecture_design_document.md  002_project_setup_report.md  003_core_processor_report.md  004_synthesis_engine_report.md  005_theory_engine_report.md  006_midi_pipeline_report.md  007_modulation_system_report.md  008_fx_engine_report.md  009_ui_report.md  010_integration_test_report.md  011_arp_fix_report.md  012_progression_library_report.md  015_wavetable_report.md  016_granular_report.md  017_sample_depth_report.md  019_arp_octave_fix_report.md  020_progression_fix_report.md  021_cpu_remaining_fixes_report.md  022_arp_static_fix_report.md  023_chord_display_fix_report.md  024_chord_display_reseed_report.md  025_progression_reseed_report.md  026_chord_debug_report.md  task_gap_fixes.md
04_LOGS/: project_log.md
05_ASSETS/apex_project/: CMakeLists.txt  CMakePresets.json  test_theory.db-shm  test_theory.db-wal
05_ASSETS/apex_project/.github/workflows/: build.yml
05_ASSETS/apex_project/DistributionContent/Bass/: Concrete Flex.hwsample  Graveyard 808.hwsample  Low End Phantom.hwsample  Night Stalker.hwsample
05_ASSETS/apex_project/DistributionContent/Horns/: Midnight Horn.hwsample  Street Brass.hwsample  War Call.hwsample
05_ASSETS/apex_project/DistributionContent/Keys/: Accustic Keys.hwsample  Afterhours Suite.hwsample  Grand Ivory.hwsample  Midnight Organ.hwsample  Rhodes.hwsample  Velvet Room.hwsample
05_ASSETS/apex_project/DistributionContent/Leads/: Chrome Runner.hwsample  Dark Star.hwsample  Howling Lead.hwsample  Midnight Siren.hwsample  Neon Blade.hwsample  Street Prophet.hwsample  Wolf Cry.hwsample
05_ASSETS/apex_project/DistributionContent/Pads/: Black Cathedral.hwsample  Frozen Horizon.hwsample  Low Gravity.hwsample  Neon Halo.hwsample
05_ASSETS/apex_project/DistributionContent/Plucks/: Frostbite.hwsample  Ghost Notes.hwsample  Hollow Picc.hwsample  Ice Fang.hwsample  Pulse Drop.hwsample  Silver Accustic.hwsample  Wireframe.hwsample
05_ASSETS/apex_project/DistributionContent/Strings/: Broken Cello.hwsample  Cold Arco.hwsample  Midnight Strings.hwsample  Street Cello.hwsample  Velvet Violin.hwsample
05_ASSETS/apex_project/DistributionContent/Woodwinds/: Lonely Sax.hwsample  Midnight Flute.hwsample  Silver Reed.hwsample  Smoked Oboe.hwsample  Urban Bassoon.hwsample
05_ASSETS/apex_project/Resources/Database/: apex.db  seed.sql
05_ASSETS/apex_project/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
05_ASSETS/apex_project/Source/engine/: FxEngine.cpp  FxEngine.h  MidiPipeline.cpp  MidiPipeline.h  ModMatrix.cpp  ModMatrix.h  SynthEngine.cpp  SynthEngine.h  TheoryEngine.cpp  TheoryEngine.h
05_ASSETS/apex_project/Source/engine/samples/: SampleKeymap.cpp  SampleKeymap.h  WDSampleLibrary.cpp  WDSampleLibrary.h  WDSamplePlayer.cpp  WDSamplePlayer.h
05_ASSETS/apex_project/Source/engine/synth/: SynthDSP.h  VoiceLayer.cpp  VoiceLayer.h  WavetableBank.h
05_ASSETS/apex_project/Source/parameters/: WolfsDenParameterLayout.cpp  WolfsDenParameterLayout.h  WolfsDenParameterRegistry.h
05_ASSETS/apex_project/Source/ui/: MainComponent.cpp  MainComponent.h  PerfXyPad.cpp  PerfXyPad.h
05_ASSETS/apex_project/Source/ui/chrome/: BottomBar.cpp  BottomBar.h  TopBar.cpp  TopBar.h
05_ASSETS/apex_project/Source/ui/pages/: BrowsePage.cpp  BrowsePage.h  CompositionPage.cpp  CompositionPage.h  FxPage.cpp  FxPage.h  ModPage.cpp  ModPage.h  PerformPage.cpp  PerformPage.h  SynthPage.cpp  SynthPage.h  TheoryPage.cpp  TheoryPage.h  WDSampleBrowserOverlay.cpp  WDSampleBrowserOverlay.h
05_ASSETS/apex_project/Source/ui/theme/: UITheme.cpp  UITheme.h  WolfsDenLookAndFeel.cpp  WolfsDenLookAndFeel.h
05_ASSETS/apex_project/Tests/: CMakeLists.txt  SmokeTest.cpp
05_ASSETS/apex_project/cmake/: CleanOldPlugins.cmake  CopyProductBundle.cmake  DeployWolfsDenPlugin.cmake
